Fix image styling over text on mobiles

--- a/src/styles/Homepage.module.css
+++ b/src/styles/Homepage.module.css
@@ -271,7 +271,7 @@ body, html {
     .overlayText {
         width: 80%;  
         left: 56%;  
-        top: 48%;   
+        top: 44%;   
         transform: translate(-50%, -50%);
         font-size: 14px; 
     }
